--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -14,12 +14,15 @@
   </style>
 </head>
 <body>
-<img src="./images/image-equilibrium.jpg" alt="">
-  <h1>Equilibrium #3429</h1> 
+  
+    <div class="imagem">
+    <img src="./images/image-equilibrium.jpg" alt=""></div>
+
+  <h3>Equilibrium #3429</h3> 
 
   <p>Our Equilibrium collection promotes balance and calm.</p> 
 
-  0.041 ETH
+  <p class="eth">0.041 ETH</p>
   3 days left
   
   
@@ -29,5 +32,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Caio-Nunes</a>.
   </div>
+
 </body>
 </html>
